--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,12 @@
-<div class="center jumbotron">
-  <div class="text-center">
-    <h1>Welcome to the TravelShare</h1>
-    <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the TravelShare</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+      <%= link_to 'Login now!', login_path, class: 'btn btn-lg btn-success' %>
+    </div>
   </div>
-</div>
+<% end %>
+
