--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
     <div class="card">
       <div class="card-header">
         <h3 class="card-title"><%= @user.name %></h3>
+        <% if current_user == @user %>
+          <%= link_to 'このUserの情報を編集する', edit_user_path(@user) %>
+          <%= link_to '退会する', @user, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+        <% end %>
       </div>
       <div class="card-body">
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
