--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,11 +14,10 @@
   <%= f.text_field :content %>
   
   <%= f.label :evaluation, 'evaluation' %>
-  <%= f.number_field :evaluation,min:1,max:5,step:3 %>
+  <%= f.number_field :evaluation,min:1,max:5 %>
 
-  <!-- 画像を入れる
   <%= f.label :image_url, 'image' %>
-  <%= f.number_field :evaluation,min:1,max:5,step:3 %> -->
+  <%= f.file_field :image_url %>
 
   <%= f.submit '投稿' %>
 <% end %>
